...
@implementation DPBrowseViewController

- (id)initWithNibName:(NSString *)nibNameOrNil bundle:(NSBundle *)nibBundleOrNil
{
    self = [super initWithNibName:nibNameOrNil bundle:nibBundleOrNil];
    if (self) {
        self.title = @"Browse";
    }
    return self;
}

- (void)viewDidLoad {
    [super viewDidLoad];
...
